# master-thesis

./: .env  Cargo.toml  README.md  run.yml
backend/: Cargo.toml
backend/src/: handler.rs  lib.rs  model.rs  schema.rs  sqrt.rs
docker/core_db/: Dockerfile  init.sql
docker/core_db_admin/: pgpass  servers.json
docker/deployment/: docker-compose.yml
docker/sso/: Dockerfile
docker/sso_db/: Dockerfile
docker/sso_db_admin/: Dockerfile  pgpass  servers.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
roles/core_db/defaults/: main.yml
roles/core_db/tasks/: docker.yml
roles/core_db/templates/: Dockerfile.j2
roles/core_db_admin/defaults/: main.yml
roles/core_db_admin/tasks/: docker.yml  json.yml  main.yml  pgpass.yml
roles/core_db_admin/templates/: Dockerfile.j2  pgpass.j2  servers.json.j2
roles/deployment/tasks/: docker.yml  main.yml
roles/post_deployment/tasks/: main.yml  sso.yml
roles/pre_deployment/tasks/: docker.yml
roles/proxy/defaults/: main.yml
roles/proxy/tasks/: docker.yml  httpd.yml  main.yml
roles/proxy/templates/: Dockerfile.j2  httpd.conf.j2
roles/sso/defaults/: main.yml
roles/sso/tasks/: docker.yml  main.yml
roles/sso/templates/: Dockerfile.j2
roles/sso_db/defaults/: main.yml
roles/sso_db/tasks/: docker.yml
roles/sso_db/templates/: Dockerfile.j2
roles/sso_db_admin/defaults/: main.yml
roles/sso_db_admin/tasks/: docker.yml  json.yml  pgpass.yml
roles/sso_db_admin/templates/: Dockerfile.j2  pgpass.j2  (+1 more)
src/: db.rs  handler.rs  ieee754.rs  lib.rs  model.rs  schema.rs  sqrt.rs
