[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

[lib]
name = "thesislib"
path = "src/lib.rs"

[[bin]]
name = "thesis"
path = "src/bin/main.rs"

[dependencies]
num-traits = "0.2.17"
rand = "0.8.5"
rayon = "1.8.0"
tfhe = { version = "0.5.1", features = ["boolean", "shortint", "integer", "x86_64"]}
