[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

[lib]
name = "thesislib"
path = "src/lib.rs"

[[bin]]
name = "thesis"
path = "src/bin/main.rs"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
bincode = "1.3.3"
chrono = { version = "0.4.34", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
num-traits = "0.2.17"
postgres = "0.19.7"
r2d2 = "0.8.10"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
serde_valid = "0.18.0"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
tfhe = { version = "0.5.2", features = ["boolean", "shortint", "integer", "x86_64"]}
uuid = { version = "1.7.0", features = ["v4"] }
